--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
     id 'com.jfrog.bintray' version '1.8.4'
 }
 
-group 'org.xmlobjects'
+group 'org.xmlobjects.xal'
 version '0.9.0'
 description 'A Java mapping for the OASIS eXtensible Address Language (xAL)'
 ext.date = new Date()
