--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,10 @@ javadoc {
         overview "$buildDir/tmp/javadoc/overview.html"
         header "xal-objects $project.version"
         bottom """
-            <a target="_blank" href="https://github.com/xmlobjects/xal-objects/issues">Report a bug or suggest an enhancement</a><br>
-            xal-objects is open source and licensed under the <a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a><br>
-            Official website and more information at: <a target="_blank" href="https://github.com/xmlobjects/xal-objects">https://github.com/xmlobjects/xal-objects</a><br>
-            Copyright &copy; 2013-${date.format('yyyy')}<br>
+            <a target="_blank" href="https://github.com/xmlobjects/xal-objects/issues">Report a bug or suggest an enhancement</a><br />
+            xal-objects is open source and licensed under the <a target="_blank" href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a><br />
+            Official website and more information at: <a target="_blank" href="https://github.com/xmlobjects/xal-objects">https://github.com/xmlobjects/xal-objects</a><br />
+            Copyright &copy; 2013-${date.format('yyyy')}<br />
             Claus Nagel &lt;claus.nagel@gmail.com&gt;
             """.replaceAll("[\r|\n]+", "")
         addStringOption('doctitle', project.name + ' - ' + project.description)
