--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 group 'org.xmlobjects.xal'
-version '0.9.2-b20200712-1149'
+version '1.0.0-rc.1'
 description 'A Java mapping for the OASIS eXtensible Address Language (xAL)'
 ext.date = new Date()
 
@@ -23,8 +23,8 @@ repositories {
 }
 
 dependencies {
-    api 'org.xmlobjects:xml-objects:0.9.2-b20200712-1149'
-    annotationProcessor 'org.xmlobjects:xml-objects:0.9.2-b20200712-1149'
+    api 'org.xmlobjects:xml-objects:1.0.0-rc.1'
+    annotationProcessor 'org.xmlobjects:xml-objects:1.0.0-rc.1'
 }
 
 javadoc {
