--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ plugins {
     id 'java-library'
     id 'distribution'
     id 'maven-publish'
-    id 'com.jfrog.bintray' version '1.8.5'
+    id 'signing'
+    id 'io.github.gradle-nexus.publish-plugin' version '1.0.0'
 }
 
 group 'org.xmlobjects.xal'
@@ -19,7 +20,7 @@ java {
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
@@ -114,22 +115,12 @@ publishing {
     }
 }
 
-bintray {
-    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+signing {
+    sign publishing.publications.mavenJava
+}
 
-    publications = ['mavenJava']
-    pkg {
-        repo = 'maven'
-        name = project.name
-        desc = project.description
-        websiteUrl = 'https://github.com/xmlobjects/xal-objects'
-        vcsUrl = 'https://github.com/xmlobjects/xal-objects.git'
-        issueTrackerUrl = 'https://github.com/xmlobjects/xal-objects/issues'
-        labels = ['xal', 'object', 'mapping', 'parsing', 'writing', 'oasis']
-        licenses = ['Apache-2.0']
-        version {
-            name = project.version
-        }
+nexusPublishing {
+    repositories {
+        sonatype()
     }
 }
