--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 group 'org.xmlobjects.xal'
-version '1.0.4-SNAPSHOT'
+version '1.0.4'
 description 'A Java mapping for the OASIS eXtensible Address Language (xAL)'
 ext.date = new Date()
 
@@ -33,8 +33,8 @@ repositories {
 }
 
 dependencies {
-    api 'org.xmlobjects:xml-objects:1.0.4-SNAPSHOT'
-    annotationProcessor 'org.xmlobjects:xml-objects:1.0.4-SNAPSHOT'
+    api 'org.xmlobjects:xml-objects:1.0.4'
+    annotationProcessor 'org.xmlobjects:xml-objects:1.0.4'
 }
 
 javadoc {
